--- a/index.Rmd
+++ b/index.Rmd
@@ -51,6 +51,7 @@ xaringanExtra::use_clipboard()
 xaringanExtra::use_progress_bar(location = "bottom", color = "darkred")
 options(htmltools.dir.version = FALSE)
 xaringanExtra::use_editable()
+xaringanExtra::use_panelset()
 xaringanExtra::use_extra_styles(
   hover_code_line = TRUE,         #<<
   mute_unhighlighted_code = FALSE  #<<
@@ -262,7 +263,7 @@ d |>
 
 ## Example 6: from long text to tibble 📚
 
-### Tarefa
+### Task
 
 1. Import *Os Lusíadas*, clean and tokenize text
 2. Transcribe, syllabify, stress lexical words
@@ -282,7 +283,9 @@ d |>
 
 ## Example 6: from long text to tibble 📚
 
-```{r, echo = T, cache = TRUE}
+.panelset[
+.panel[.panel-name[Code]
+```{r, echo = T, cache=TRUE}
 lus1 = read_lines("lusiadas.txt")                        
 
 lus2 = lus1 |> 
@@ -292,7 +295,7 @@ lus2 = lus1 |>
   filter(!word %in% stopwords_pt) |>                     # stopword removal
   mutate(ipa = ipa(word),                                # column for transcription
          stress = getStress(ipa),                        # column for stress
-         weight = getWeight(ipa),                        # outra para o peso
+         weight = getWeight(ipa),                        # column for weight
          finSyl = getSyl(word = ipa, pos = 1),           # column for final syllable
          onsetFin = syllable(finSyl, const = "onset"),
          nucFin = syllable(finSyl, const = "nucleus"),
@@ -300,28 +303,37 @@ lus2 = lus1 |>
          rhFin = syllable(finSyl, const = "rhyme"))
 ```
 
+]
 
----
+.panel[.panel-name[Result]
 
-## Example 6: from long text to tibble 📚
+- Total number of lexical words `r nrow(lus2)` (⏳ **< 2s**)
+- *Tidy data* format ready for analysis
 
-```{r, echo = F, cache = TRUE}
+<br>
+
+```{r, echo = F, cache=TRUE}
 lus2 |>
   slice(1:5) |>
   kable(booktabs = T) |>
   kable_styling()
 ```
+]
+
+.panel[.panel-name[Glides?]
 
 
-- Total number of lexical words: `r nrow(lus2)` (⏳ **< 2s**)
+- Are glides onsets, codas, or are they in the nucleus...❓ 
+- The function `syllable()` allows us to adjust our assumptions:
 
---
-
-- Should we count glides as onsets, codas... nuclei❓ 
+<br>
 
 <div align = "center">
 <img src="syllable.png" alt="syllable" style="width:80%;">
 </div>
+
+]
+]
 
 ---
 
