--- a/index.Rmd
+++ b/index.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-class: inverse, center, middle
+class: title-slide, inverse, center, middle
 
 # Fonology
 ## Phonological Analysis in R
