--- a/index.Rmd
+++ b/index.Rmd
@@ -41,6 +41,8 @@ class: title-slide, inverse, center, middle
 
 #### Université Laval • Centre for Research on Brain, Language & Music (CRBLM)
 
+<p style = "color: #FEC20B; font-family: Fira Code, Menlo, monospace;">Updated on: April 14, 2023</p>
+
 ---
 
 ```{r xaringanExtra, echo=FALSE}
