--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Fonology"
-subtitle: "Phonological Analysis in R"
+subtitle: "L'analyse phonologique en R"
 author: "Guilherme D. Garcia"
 institute: "• Université Laval •"
 date: ""
@@ -12,7 +12,7 @@ output:
       highlightStyle: github
       ratio: '16:9'
       center: true
-      slideNumberFormat: "%current% of %total%"
+      slideNumberFormat: "%current% de %total%"
       highlightLines: true
       countIncrementalSlides: false
     seal: false
@@ -30,16 +30,18 @@ knitr::opts_chunk$set(
 class: title-slide, inverse, center, middle
 
 # Fonology
-## Phonological Analysis in R
+## une extension R pour l’analyse phonologique à partir de données écrites
 ### Guilherme D. Garcia
 
-<a href = "https://gdgarcia.ca" style="color: #FEC20B">`r fa("globe-americas")`</a>
+<a href = "https://fr.gdgarcia.ca" style="color: #FEC20B">`r fa("globe-americas")`</a>
 
 
 <img src="ULaval2.png" alt="Université Laval" style="width:7%">
 
 
-#### Université Laval • Centre for Research on Brain, Language & Music (CRBLM)
+#### Université Laval • CRBLM • CRIHN
+
+#### Colloque du CRIHN • 11 octobre 2023
 
 ---
 
@@ -58,33 +60,33 @@ xaringanExtra::use_extra_styles(
 )
 ```
 
-## What is it? 🤔
+## Introduction
 
 <img src="fonology.png" alt="Fonology" style="width:15%; float: right">
-- An R package to help phonologists automate certain tasks
-- Currently under development; frequent updates
+- Une extension R pour extaire des variables phonologiques des données écrites
+- Disponible sur [fr.gdgarcia.ca/fonology](https://fr.gdgarcia.ca/fonology) (en développement) 
 
-- **This presentation**: demo of main functions
-
---
-
-## Goal
-
-> Automate data prep for phonological analysis
+- **Cette présentation** : une démonstrations des fonctions principales
 
 --
 
-## Content
+## Objectif
 
-- **Research**: speed and precision (scalability)
-- **Teaching**: accessibility and interactivity
+> Automatiser la préparation des données pour l'analyse phonologique/linguistique
+
+--
+
+## Domaines
+
+- **La recherche** : vitesse et précision
+- **L'enseignement** : interactivité et didactique 
 
 ---
 
 ## Installation etc. 🧐
 
-- Visit [gdgarcia.ca/fonology](https://gdgarcia.ca/fonology) for detailed info
-- To install the package:
+- Visitez [fr.gdgarcia.ca/fonology](https://gdgarcia.ca/fonology) 
+- Pour installer l'extension :
 
 ```{r, echo=T, eval=FALSE}
 library(devtools) # install.packages("devtools")
@@ -93,46 +95,32 @@ install_github("guilhermegarcia/fonology")
 
 --
 
-## Feedback, bugs, questions 🪲
+## Bugs, questions, etc. 🪲
 
-- Go here: [github.com/guilhermegarcia/fonology/issues](https://github.com/guilhermegarcia/fonology/issues)
-
---
-
-## Assumption of this presentation
-
-- You know some basic R and are familiar with `tidyverse`
+- [github.com/guilhermegarcia/fonology/issues](https://github.com/guilhermegarcia/fonology/issues)
 
 ---
 
-## Road map 🗺️
+## Aujourd'hui 🗺️
 
-### Demo of main functions:
+### Les fonctions principales
 
-1. <h-l>Phonemic transcription</h-l>
+1. <h-l>La transcription phonémique</h-l>
 --
 
-2. Extraction of stress/syllables, syllabic constituents
+2. L'accent, la syllabe et ses composants
 --
 
-3. Sonority
+3. La sonorité
 --
 
-4. Vowel trapezoids
+4. Le trapèze vocalique
 --
 
-5. Natural classes
+5. Les calsses naturelles
 --
 
-6. Word generator (pt) + phonotactic probability
---
-
-7. Vowel formants + `ggplot2` (simple *wrapper*)
---
-
-8. From IPA to TIPA
-
-
+6. Le générateur de mots + probabilité phonotactique
 --
 
 ***
@@ -140,24 +128,24 @@ install_github("guilhermegarcia/fonology")
 
 <br>
 
-> *Little can be done without grapheme-phoneme conversion*
+> *Peu de choses peuvent êtres faites sans la conversion graphème-phonème*
 
 <br>
-- <h-l>Written data</h-l>: easy to find and collect, difficult to analyze
-- Phonemic transcription: **essential** starting point
+- <h-l>Les données écrites</h-l> : facile de trouver et de collecter; difficile à analyser
+- La transcription phonémique est donc **essentielle**
 
 
 ---
 
 class: inverse, center, middle
 
-# Main functions
+# Les fonctions principales
 
 ---
 
-## Example 1: broad transcription
+## Exemple 1 : transcription phonémique
 
-- `ipa_pt(...)`: phonemic transcription for Portuguese
+- `ipa_pt(...)` : transcription du portugais
 
 ```{r, echo = TRUE}
 library(Fonology)
@@ -170,12 +158,12 @@ ipa_pt("parangaricutirrimirruaro")
 
 --
 
-- **Not vectorized** (i.e., serial): ideal for *one* input
-- <h-l>Advantage</h-l>: probabilistic stress assignment, useful for nonce words
+- **Non vectorisée** (c.-à-d. sérielle) : idéale pour *un* seul mot
+- <h-l>Avantage</h-l> : l'attribution probabiliste de l'accent (utile pour des mots hypothétiques)
 
 ---
 
-## Example 2: narrow transcription
+## Exemple 2 : transcription phonétique
 
 - `ipa_pt(..., narrow = T)`
 
@@ -186,16 +174,15 @@ ipa_pt("quiséssemos", narrow = T)
 ipa_pt("parangaricutirrimirruaro", narrow = T)
 ```
 
-- **Not vectorized** (i.e., serial): ideal for *one* input
-- <h-l>Advantage</h-l>: probabilistic stress assignment, useful for nonce words
-
+- **Non vectorisée** (c.-à-d. sérielle) : idéale pour *un* seul mot
+- <h-l>Avantage</h-l> : l'attribution probabiliste de l'accent (utile pour des mots hypothétiques)
 
 ---
 
-## Example 3: transcription *en masse*
+## Exemple 3 : transcription *en masse*
 
-- <h-l>Crucial</h-l>: being able to transcribe a lot of words *quickly*
-- `ipa(...)`: vectorized (<h-l>Portuguese and Spanish</h-l>)
+- <h-l>Crucial</h-l> : être capable de transcrire beaucoup de mots **rapidement**
+- `ipa(...)` : vectorisée (<h-l>portugais et espagnol</h-l>); français en développement
 
 
 ```{r, echo = TRUE, cache = TRUE}
@@ -204,7 +191,7 @@ ipa(word = c("Example", "com", "múltiplas", "palavras"))
 
 --
 
-- Narrow transcription also available (for Portuguese only):
+- Transcription phonétique disponible pour le portugais :
 
 ```{r, echo = TRUE, cache = TRUE}
 ipa(word = c("Encontramos", "transcrição", 
@@ -212,21 +199,21 @@ ipa(word = c("Encontramos", "transcrição",
     narrow = T)
 ```
 
-- **Vectorized** function (i.e., parallel): ideal for a lot of data
-- <h-l>Advantage</h-l>: speed (*but* stress is assigned **categorically**)
+- Fonction **vectorisée** (c.-à-d., parallèle) : idéale pour les grandes quantités de mots
+- <h-l>Avantage</h-l> : vitesse (*mais* l'accent est attribué de façon **catégorique**)
 
 
 ---
 
-## Example 4: short text 💬
+## Exemple 4 : un texte court 💬
 
-- `ipa()` requires tokenized inputs
-- What if our input is a text...?
-- <mark>`cleanText()`</mark>: data cleaning and tokenization
+- `ipa()` exige des entrées tokénisés 
+- Et si notre entrée est un texte?
+- <mark>`cleanText()`</mark> : nettoyage et tokénisation de données
 
 ```{r, echo = TRUE, message = F, tidy=FALSE, cache = TRUE}
 library(tidyverse)
-# Sample sentence in Portuguese with some weird stuff in it:
+# Exemple en portugais :
 text = "Este é um teXto 123# bastante cUrto que Não está tokenizado"
 
 text |> 
@@ -237,9 +224,7 @@ text |>
 
 ---
 
-## Example 5: from short text to tibble 💬
-
-- We often work with *data frames* or *tibbles*
+## Exemple 5 : d'un texte courte à un tableau *tidy* 💬
 
 ```{r, echo = TRUE, cache = TRUE}
 text = "Este é um teXto 123# bastante cUrto que Não está tokenizado"
@@ -261,27 +246,27 @@ d |>
 
 ---
 
-## Example 6: from long text to tibble 📚
+## Exemple 6 : d'un texte long à un tableau *tidy* 📚
 
-### Task
+### Tâche
 
-1. Import *Os Lusíadas*, clean and tokenize text
-2. Transcribe, syllabify, stress lexical words
-3. Extract stress and final syllable
-4. Extract final syllable constituents
+1. Importer *Os Lusíadas*, nettoyer et tokéniser le texte
+2. Transcrire, syllaber, accentuer les mots lexicaux
+3. Extraire l'accent et la syllabe finale
+4. Extraire les composantes de cette syllabe
 
 --
 
-- `getStress()`: extracts stress from transcription
-- `getWeight()`: extracts weight profile (e.g., `LLH`)
-- `getSyl()`: extracts a given syllable
-- `syllable()`: extracts syllabic constituents
-- `stopwords_pt` and `stopwords_sp`: stopwords in (adapted from `tm` package)
+- `getStress()` : extrait l'accent d'un mot phonémiquement transcrit
+- `getWeight()` : extrait le poids syllabique (p. ex., `LLH`)
+- `getSyl()` : extrait une syllabe spécifique
+- `syllable()` : extrait les composantes syllabiques
+- `stopwords_pt` et `stopwords_sp` : *stopwords* en portugais ou espagnol (adaptées de l'extension `tm`)
 
 
 ---
 
-## Example 6: from long text to tibble 📚
+## Exemple 6 : d'un texte long à un *tibble* 📚
 
 .panelset[
 .panel[.panel-name[Code]
@@ -289,14 +274,14 @@ d |>
 lus1 = read_lines("lusiadas.txt")                        
 
 lus2 = lus1 |> 
-  cleanText() |>                                         # data cleaning + tokenization
+  cleanText() |>                                         # nettoyage + tokénisation
   as_tibble() |> 
   rename(word = value) |> 
-  filter(!word %in% stopwords_pt) |>                     # stopword removal
-  mutate(ipa = ipa(word),                                # column for transcription
-         stress = getStress(ipa),                        # column for stress
-         weight = getWeight(ipa),                        # column for weight
-         finSyl = getSyl(word = ipa, pos = 1),           # column for final syllable
+  filter(!word %in% stopwords_pt) |>                     # suppression des stopwords
+  mutate(ipa = ipa(word),                                # colonne de transcription
+         stress = getStress(ipa),                        # colonne de l'accent
+         weight = getWeight(ipa),                        # colonne du poids syllabique
+         finSyl = getSyl(word = ipa, pos = 1),           # colonne de la syllabe finale
          onsetFin = syllable(finSyl, const = "onset"),
          nucFin = syllable(finSyl, const = "nucleus"),
          codaFin = syllable(finSyl, const = "coda"),
@@ -305,10 +290,10 @@ lus2 = lus1 |>
 
 ]
 
-.panel[.panel-name[Result]
+.panel[.panel-name[Résultat]
 
-- Total number of lexical words `r nrow(lus2)` (⏳ **< 2s**)
-- *Tidy data* format ready for analysis
+- Nombre total de mots lexicaux `r nrow(lus2)` (⏳ **< 2s**)
+- *Tidy data* format prêt pour l'analyse
 
 <br>
 
@@ -320,11 +305,10 @@ lus2 |>
 ```
 ]
 
-.panel[.panel-name[Glides?]
+.panel[.panel-name[Semi-voyelles?]
 
 
-- Are glides onsets, codas, or are they in the nucleus...❓ 
-- The function `syllable()` allows us to adjust our assumptions:
+- Le statut des semi-voyelles
 
 <br>
 
@@ -337,9 +321,9 @@ lus2 |>
 
 ---
 
-## Example 7: sonority 🔉
+## Exemple 7 : sonorité 🔉
 
-- `demi(word = ..., d = ...)`: extraction of demisyllables (`d = 1` or `d = 2`)
+- `demi(word = ..., d = ...)`: extraction de demi syllabes (`d = 1` ou `d = 2`)
 
 ```{r}
 syllables = c("kom", "sil", "fran", "klas")
@@ -350,7 +334,7 @@ syllables |>
 
 --
 
-- We can also calculate the average sonority dispersion of a vector with `meanSonDisp()`:
+- On peut également calculer la dispersion de sonorité moyenne pour un vecteur avec `meanSonDisp()`:
 
 ```{r}
 syllables |> 
@@ -358,15 +342,15 @@ syllables |>
   meanSonDisp()
 ```
 
-- **Note**: The function assumes 17 levels of sonority (see Parker 2011)<sup>1</sup>
+- **Observation** : La fonction suppose 17 niveaux de sonorité (Parker 2011)<sup>1</sup>
 
 .footnote[[1] Parker, S. (2011). Sonority. In M. van Oostendorp, C. J. Ewen, E. Hume, & K. Rice (Eds.), *The Blackwell companion to phonology* (pp. 1160–1184). Wiley Online Library. https://doi.org/10.1002/9781444335262.wbctp0049]
 
 ---
 
-## Example 8: sonority 🔊
+## Exemple 8 : sonorité 🔊
 
-- When teaching phonology, it may be useful to visualize sonority levels:
+- Pour l'enseignement de la phonologie :
 
 .pull-left[
 
@@ -390,10 +374,10 @@ syllables |>
 
 ---
 
-## Example 9: vowel trapezoids
+## Exemple 9 : trapèzes vocaliques
 
-- `plotVowels()` generates trapezoids for some languages
-- It also exports the <mark>`tex`</mark> file for those who use $\LaTeX$
+- `plotVowels()` génère le trapèze vocalique pour quelques langues
+- La fonction peut exporter un ficher <mark>`tex`</mark> pour ceux qui utilisent $\LaTeX$
 
 .pull-left[
 
@@ -416,9 +400,9 @@ plotVowels(lg = "Italian",
 
 ---
 
-## Example 10: natural classes and distinctive features
+## Exemple 10 : les classes naturelles et les traits distinctifs
 
-- From phonemes to traits $\rightarrow$ `getFeat()`:
+- Des phonèmes aux traits distinctifs $\rightarrow$ `getFeat()` :
 
 ```{r, cache = TRUE}
 getFeat(ph = c("i", "u"), lg = "English")
@@ -428,7 +412,7 @@ getFeat(ph = c("i", "y", "u"), lg = "French")
 
 --
 
-- From traits to phonemes $\rightarrow$ `getPhon()`:
+- Des traits distinctifs au phonèmes $\rightarrow$ `getPhon()` :
 
 ```{r, cache = TRUE}
 getPhon(ft = c("+syl", "+hi"), lg = "French")
@@ -438,9 +422,9 @@ getPhon(ft = c("-son", "+vce"), lg = "Spanish")
 
 ---
 
-## Example 11: word generator and phonotactic probability 🎲
+## Exemple 11 : générateur de mots + probabilité phonotaxique 🎲
 
-- `wug_pt()` creates possible words in Portuguese
+- `wug_pt()` génère des mots possibles en portugais
 
 ```{r, cache = TRUE}
 set.seed(1)
@@ -449,7 +433,7 @@ wug_pt(profile = "LHL")
 
 --
 
-- Let's create a tibble with 8 new words + their phonotactic probability with <mark>`biGram_pt()`</mark>:
+- Un *tibble* avec 8 nouveaux mots + leurs probabilités phonotaxiques avec <mark>`biGram_pt()`</mark> :
 
 ```{r, message = F, cache = TRUE}
 set.seed(1)
@@ -461,10 +445,10 @@ gen = tibble(word = wug_pt("LHL", n = 8)) |>
 
 ---
 
-## Example 11: word generator and phonotactic probability 🎲
+## Exemple 11 : générateur de mots + probabilité phonotaxique 🎲
 
 .pull-left[
-- Lower bigram values $\rightarrow$ less probable
+- Bigrammes :
 
 ```{r, echo = F, cache = TRUE}
 gen |> 
@@ -477,9 +461,9 @@ gen |>
 --
 
 .pull-right[
-- Bigrams are calculated based on [PSL](https://gdgarcia.ca/psl)
-- Access the simplified version of the lexicon with `pt_lex`
-- Or the whole lexicon with `psl`
+- Les bigrammes sont calculés selon le [PSL](https://gdgarcia.ca/psl)
+- La version simplifiée du lexique $\rightarrow$ `pt_lex`
+- Ou le lexique complet $\rightarrow$ `psl`
 
 ```{r, cache = TRUE}
 set.seed(1)
@@ -489,7 +473,7 @@ pt_lex |> sample_n(5)
 
 ---
 
-## Example 12: Listing bigrams 🎲
+## Exemple 12 : Bigrammes 🎲
 
 .pull-left[
 ```{r, echo = T, cache = TRUE}
@@ -510,26 +494,25 @@ lus_bigramas |>
 --
 
 .pull-right[
-- <mark>`nGramTbl()`</mark> $\rightarrow$ all bigrams
-- Now it's easy to plot patterns
+- <mark>`nGramTbl()`</mark> $\rightarrow$ tous les bigrammes
 
 
-### Visualizing bigrams
+### Visualisation des bigrammes
 
-- Together with `nGramTbl()`:
-- <mark>`plotnGrams()`</mark> $\rightarrow$ figures with `ggplot2`
+- Avec `nGramTbl()` :
+- <mark>`plotnGrams()`</mark> $\rightarrow$ figures avec `ggplot2`
 
 
-- Two options:
+- Deux options :
 1. `type = "heat"`
 2. `type = "lollipop"`
 
-- In both, we define the number of bigrams `n`
+- Le nombre de bigrammes = `n`
 ]
 
 ---
 
-## Example 12: Visualizing bigrams 🎲
+## Exemple 12 : Visualisation des bigrammes 🎲
 
 .pull-left[
 ```{r, fig.align='center', fig.width=4, fig.height=3, fig.retina=TRUE, dpi=800, cache = TRUE}
@@ -550,9 +533,9 @@ lus_bigramas |>
 
 ---
 
-## Example 12: Visualizing bigrams 🎲
+## Exemple 12 : Visualisation des bigrammes 🎲
 
-- Network with top 50 bigrams from *Os Lusiádas* with `networkD3` (excluding `#`)
+- Réseau avec les principaux bigrammes de *Os Lusíadas* avec `networkD3` (à l'exclusion de `#`)
 
 <br>
 
@@ -570,7 +553,7 @@ htmltools::tags$div(
 
 
 
-## Example 13: vowel plot 🗣️
+## Exemple 13 : vowel plot 🗣️
 
 - A simple *wrapper* for F1/F2 in `ggplot2`. Example with `vowels` (hypothetical values): 
 
@@ -582,9 +565,9 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 
 ---
 
-## Example 13: vowel plot 🗣️
+## Exemple 13 : graphique de voyelles 🗣️
 
-- A simple *wrapper* for F1/F2 in `ggplot2`. Example with `vowels` (hypothetical values): 
+- Un *wrapper* simple pour visualiser les formants F1/F2 avec `ggplot2`. Exemple avec `vowels` (valeurs hypothétiques) : 
 
 ```{r, fig.align='center', fig.width=5, fig.height=3, fig.retina=TRUE, dpi = 800, out.height="300px", cache = TRUE}
 ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
@@ -595,10 +578,10 @@ ggplot(data = vowels, aes(x = F2, y = F1, color = vowel, label = vowel)) +
 
 ---
 
-## Example 14: from IPA to TIPA ✏️
+## Exemple 14 : de l'API à l'extension TIPA ✏️
 
-- If you use $\LaTeX$, `tipa` is essential
-- The function `ipa2tipa()` translates an IPA sequence into `tipa`:
+- Si vous utilisez $\LaTeX$, `tipa` est une extension essentielle
+- La fonction `ipa2tipa()` traduit une séquence en API vers une séquence `tipa` :
 
 --
 
@@ -626,4 +609,4 @@ ipa("obrigado") |>
   plotSon(syl = T)
 ```
 
-- This project has benefitted from the ENVOL program (Université Laval)
+- Ce projet a bénéficié du programme ENVOL (Université Laval)
